--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="button" value="开始游戏" id="play" onclick="play()">
-    <div class="hezi">
+    <div class="hezi" id="hezi">
         <table border="1" cellspacing="0" id="mytable">
             <tr>
                 <td></td>
